--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -127,17 +127,13 @@
 
 /* Lifestyle "Vector 2" connector line positioning */
 .lifestyle-vector2 {
-  position: absolute;
-  top: 0;
-  /* left: 20%; */
-  /* transform: translateX(-20%); */
-  width: min(200vw, 2000px);
-  height: 4000px;
+  /* Simplified styles - all positioning handled by parent component */
+  width: 100%;
+  height: 100%;
   pointer-events: none;
-  z-index: 2;
 }
 
-@media (max-width: 1200px) {
+@media (max-width: 900px) {
   .lifestyle-vector2 {
     display: none;
   }
